    * [S2GRAPH-219] - Added query that includes all vertices and associated edges for GraphVisualize.
    * [S2GRAPH-222] - Support Not logical operator in WhereParser.
    * [S2GRAPH-223] - Support WhereParser on Vertex.

** Task
    * [S2GRAPH-162] - Update year in the NOTICE file.
    * [S2GRAPH-211] - Include 's2jobs' test in CI
    * [S2GRAPH-212] - Fix broken markdown on README.md.

Release 0.1.0 - Released

  NEW FEATURES

    S2GRAPH-34: Provide option to select which field in edge's properties to run timeDecay function (Committed by DOYUNG YOON).

    S2GRAPH-35: Provide normalize option on query (Committed by DOYUNG YOON).

    S2GRAPH-36: Provide Blocking API for Edge/Vertex operations (Committed by DOYUNG YOON).

    S2GRAPH-32: Support variable such as now, day, hour on query (Committed by DOYUNG YOON).

    S2GRAPH-45: Provide way to call specific bucket on experiment (Committed by DOYUNG YOON).

    S2GRAPH-33: Support weighted sum of multiple query results (Committed by DOYUNG YOON).

    S2GRAPH-50: Provide new HBase Storage Schema (Committed by DOYUNG YOON).

    S2GRAPH-60: Add divide operation to scorePropagateOp.
        	(Contributed by Junki Kim<wishoping@gmail.com>, committed by DOYUNG YOON).

    S2GRAPH-12: Add Label Name Swap Feature.
        	(Contributed by Hyunsung Jo<hyunsung.jo@gmail.com>, committed by DOYUNG YOON).

  IMPROVEMENT

    S2GRAPH-14: Abstract HBase specific methods in Management and Label (Committed by DOYUNG YOON).

    S2GRAPH-24: Add counter config for readonly graph (Committed by Jaesang Kim).

    S2GRAPH-11: Performance tuning on sort by scoreSum on PostProcess (Committed by DOYUNG YOON).

    S2GRAPH-16: Performance tunning on where parser (Committed by DOYUNG YOON).

    S2GRAPH-37: Extract LockExpireDuration as configuration (Committed by DOYUNG YOON).

    S2GRAPH-39: Better exception message on converting between Json and InnerVal (Committed by DOYUNG YOON).
